# grove-fsdp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
grove_fsdp/: __init__.py  dbuffer.py  distributed_data_parallel_config.py  fully_shard.py  grove_fsdp.py  mixed_precision.py  nccl_allocator.py  package_info.py  param_and_grad_buffer.py  uneven_dtensor.py  utils.py
scripts/: check_dbuffer_zero_copy.py  check_nccl_registered_zero_copy.py  profile_qwen25_1p5b_fsdp.py  profile_qwen3_4b_fsdp.py
tests/: test_against_torch_fsdp2.py  test_dbuffer_planner.py  test_distributed_index.py  test_imports.py
veScale/: requirements.txt  setup.py
veScale/scripts/: run_test.sh
veScale/vescale/: __init__.py
veScale/vescale/dtensor/: _dispatch.py  _op_schema.py  _sharding_prop.py
